--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -29,132 +29,153 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
       <nav style="background:#F2F7FF;">
           <a>  |  </a> 
-            <a href="#section1" class="mb-5 text-justify"><b>PhD thesis</b></a> <a>  |  </a> 
-            <a href="#section2"><b>Manuscripts in preparation</b></a>    <a>  |  </a> 
-            <a href="#section3"><b>Peer-reviewed scientific articles</b></a>    <a>  |  </a> 
-            <a href="#section4"><b>Non-peer reviewed articles</b></a>    <a>  |  </a> 
+           
+            <a href="#section1"><b>Manuscripts in preparation  </b></a>    <a>  |  </a> 
+            <a href="#section2"><b>Peer-reviewed Scientific Articles</b></a>    <a>  |  </a> 
+            <a href="#section3"><b>Preprints & Non-peer Reviewed Articles</b></a>    <a>  |  </a> 
       </nav>
 
       <nav style="background:#F2F7FF;"><a>  |  </a>
-            <a href="#section5"><b>Press releases</b></a>    <a>  |  </a> 
-            <a href="#section6"><b>Articles in the general press</b></a>    <a>  |  </a> 
+            <a href="#section4" class="mb-5 text-justify"><b>PhD Thesis</b></a> <a>  |  </a>     
+            <a href="#section5"><b>Press Releases</b></a>    <a>  |  </a> 
+            <a href="#section6"><b>Articles in the General Press</b></a>    <a>  |  </a> 
             <a href="#section7"><b>Master's Student Supervision</b></a>    <a>  |  </a> 
       </nav>
 
   </div>
       <div style="line-height:60%;"> <br></div>
       <hr> 
-      <div style="line-height:160%;"> <br></div>
+      <div style="line-height:20%;"> <br></div>
 
 
-
-    <section id="section1"></section>
-      <div> 
-        <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> 
-      </div>
-  
-      <div class="divider my-0"></div>
-          <p align="justify">
-            <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
-              <text class="text-lg"> 
-                <u>Lopez-Rodriguez D</u>. 
-                <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> 
-                GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
-            </a>
-          </p>
-        <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
-              <text class="text-lg"> 
-                <b>Download</b> 
-              </text>
-          </a>
-
-
- <section id="section2"></section>
-     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in preparation <font size="2"> (as of 07/23) </font>    </div>
-  <div class="divider my-0"></div>
-  
-<div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Nature Communications. </i>  </p> </div>
-<div class="text-lg"> <p align="justify" style="margin-left: 20px">  &#8594; *Co-first authorship</p> </div>
-<div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b>  &#8594; BioRxiv preprint: https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1 </b> </p> </div>
-<br>
-
-<div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i>  </p> </div><br>
-
-
-<div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i>  </p> </div>
-
-
-
-
-
-
-
-<section id="section3"></section>
-    <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed scientific articles</div>
-  <div class="divider my-0"></div>
- 
- <div class="text-lg">  <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">  Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
- </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">  <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
- </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank">  <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
- </p></a>
 
  
 
- <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href=" https://ehp.niehs.nih.gov/curated-collections/eds-choice-2021" target="_blank"> &#8594; Article selected as one of the 15 papers included in the 2021 Editors' Choice Collection of Environmental Health Perspectives (EHP). </div>
- </p></a>
-  <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP9560" target="_blank"> &#8594; <b> Associated Invited perspective article</b>: Levin E. <i> Does Developmental Adaptation Pose Risks with Changing Toxicant Exposures?</i> Environ Health Perspect. 2021. Vol. 129, No. 8.   </div>
- </p></a>
-
+ <section id="section1"></section>
+     <div class="text-2xl w-full font-bold mb-0 mt-10">Manuscripts in Preparation / Under Review <font size="2"> (as of 03/24) </font>  <hr>  </div>
  
-  
- <br>
+      <div style="line-height:50%;"> <br></div>
 
 
 
-<div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
- </p></a><br>
-<div class="text-lg"> <p align="justify"><a href="https://academic.oup.com/endo/article/160/11/2558/5565236?login=false" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Sevrin E, Gérard A, Balsat C, Blacher S, Noël A, Parent AS. <i>Persistent vs Transient Alteration of Folliculogenesis and Estrous Cycle After Neonatal vs Adult Exposure to Bisphenol A.</i> <b>Endocrinology</b> 160, 2558–2572 (2019) </div>
- </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1521690X21000968" target="_blank"> <u>Lopez-Rodriguez D</u>, Franssen D, Heger S, Parent AS. <i>Endocrine-disrupting chemicals and their effects on puberty </i> <b>Best Pract Res Clin Endocrinol Metab</b>. 2021 Sep;35(5):101579 </div>
- </p></a><br>
-<div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
- </p></a><br>
-<div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/pii/S1521690X1930051X?via%3Dihub" target="_blank"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Franssen D, Parent AS. <i>Endocrine disrupters and possible contribution to pubertal changes.</i> <b>Best Pract Res Clin Endocrinol Metab</b>. 2019 Jun;33(3):101300</div>
- </p></a><br>
-<div class="text-lg"> <p align="justify"><a href="https://pubmed.ncbi.nlm.nih.gov/25017494/" target="_blank">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. <i>Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands.</i> <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014) </div>
- </p></a>
+      <ul class="list-disc mx-6 mb-10 grid gap-2">
+
+      <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>   Under Review in Nature Communications. </b> </p> </div></li>
+      <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
+      <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div><br>
+      </li>
+      <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Manuscripts in Preparation. </p> </div>
+      </li>
+
+      </ul>
+      
 
 
- <section id="section4"></section>
-   <div class="text-2xl w-full font-bold mb-0 mt-10">Non-peer reviewed articles <font size="2"> (self-published) </font> </div>
-  <div class="divider my-0"></div>
 
- <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
+
+
+
+
+
+
+
+
+<section id="section2"></section>
+    <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed Scientific Articles<hr> </div>
+    <div style="line-height:50%;"> <br></div>
+
+
+    <ul class="list-disc mx-6 mb-10 grid gap-2">
+      <li><div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
+      </p></a></li>
+      <li>  <div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank">  <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
+      </p></a></li>
+      <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href=" https://ehp.niehs.nih.gov/curated-collections/eds-choice-2021" target="_blank"> &#8594; Article selected as one of the 15 papers in the 2021 EHP Editors' Choice Collection. </div>
+      </p></a>
+       <div class="text-lg"><p align="justify" style="margin-left: 20px"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP9560" target="_blank"> &#8594; <b> Associated Invited perspective article</b>: Levin E. <i> Does Developmental Adaptation Pose Risks with Changing Toxicant Exposures?</i> Environ Health Perspect. 2021. Vol. 129, No. 8.   </div>
+      </p></a>
+ 
+      <li><div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">  <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F.<i> Ontogeny of ependymoglial cells lining the third ventricle in mice.</i> <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
+      </p></a></li>
+      <li><div class="text-lg"> <p align="justify"><a href="https://academic.oup.com/endo/article/160/11/2558/5565236?login=false" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Sevrin E, Gérard A, Balsat C, Blacher S, Noël A, Parent AS. <i>Persistent vs Transient Alteration of Folliculogenesis and Estrous Cycle After Neonatal vs Adult Exposure to Bisphenol A.</i> <b>Endocrinology</b> 160, 2558–2572 (2019) </div>
+      </p></a></li>
+      <li><div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1521690X21000968" target="_blank"> <u>Lopez-Rodriguez D</u>, Franssen D, Heger S, Parent AS. <i>Endocrine-disrupting chemicals and their effects on puberty </i> <b>Best Pract Res Clin Endocrinol Metab</b>. 2021 Sep;35(5):101579 </div>
+      </p></a></li>
+      <li><div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/pii/S1521690X1930051X?via%3Dihub" target="_blank"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Franssen D, Parent AS. <i>Endocrine disrupters and possible contribution to pubertal changes.</i> <b>Best Pract Res Clin Endocrinol Metab</b>. 2019 Jun;33(3):101300</div>
+      </p></a></li>
+      <li><div class="text-lg">  <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">  Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. <i> Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. </i> <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
+      </p></a></li>
+      <li><div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS.<i> A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals.</i> <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
+      </p></a></li>
+      <li><div class="text-lg"> <p align="justify"><a href="https://pubmed.ncbi.nlm.nih.gov/25017494/" target="_blank">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. <i>Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands.</i> <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014) </div>
+      </p></a></li>
+
+    </ul>
+
+
+
+ <section id="section3"></section>
+   <div class="text-2xl w-full font-bold mb-0 mt-10">Preprints &  Non-peer Reviewed Articles <hr></div>
+   <div style="line-height:50%;"> <br></div>
+   <ul class="list-disc mx-6 mb-10 grid gap-2">
+
+    <li>  <div class="text-lg"> <p align="justify"> <a href=" https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1" target="_blank"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Nature Communications. </i> <b>BioRxiv preprint. </b> </a>  </p> </div>
+    </li>
+    <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
+    <li> <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
+    </li>
+
+    </ul>
+    
+
  </p>
-  <a href=" " target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
 
 
+
+  <section id="section4"></section>
+  <div> 
+    <div class="text-2xl w-full font-bold mb-0">PhD Thesis<hr></div> 
+    <div style="line-height:50%;"> <br></div>
+
+  </div>
+
+
+
+      <p align="justify">
+        <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
+          <text class="text-lg"> 
+            <u>Lopez-Rodriguez D</u>. 
+            <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> 
+            GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
+        </a>
+      </p>
+    <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
+          <text class="text-lg"> 
+            <b>Download</b> 
+          </text>
+      </a>
 
 
 
   <section id="section5"></section>
-    <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases </div>
-  <div class="divider my-0"></div>
+    <div class="text-2xl w-full font-bold mb-0 mt-10">Press Releases <hr></div>
+    <div style="line-height:50%;"> <br></div>
 
-  <a class="text-lg" href="https://assets-global.website-files.com/6543c26983f71e6ff11cd4ed/65e6959467817e63e77710c2_20230304%20PR%20PEASSP%20Fr.pdf"><i> Pesticide Monitoring Study</i></a>
-  <br>
-  <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> Endocrine society</i></a>
-  <br>
-  <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i> University of Liege</i></a>
-
-
+    <ul class="list-disc mx-6 mb-10 grid gap-2">
+          <li>  <a class="text-lg" href="https://assets-global.website-files.com/6543c26983f71e6ff11cd4ed/65e6959467817e63e77710c2_20230304%20PR%20PEASSP%20Fr.pdf"><i> Pesticide Monitoring Study</i></a>
+          </li>
+          <li>  <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i>Endocrine society</i></a>
+          </li>
+          <li>   <a class="text-lg" href="https://www.endocrine-abstracts.org/ea/0063/ea0063oc8.3"><i>University of Liege</i></a>
+          </li>
+      </ul>
 
       <section id="section6"></section>
-          <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the general press</div>
+          <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the General Press<hr></div>
+  
 
-          <div class="divider my-0"></div>
           
           <p align="justify"></p>
 
@@ -200,8 +221,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
             </div>
 
       <section id="section7"></section>
-          <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision   </div>
-          <div class="divider my-0"></div>
+          <div class="text-2xl w-full font-bold mb-0 mt-10">Master's Student Supervision <hr>  </div>
+          <div style="line-height:50%;"> <br></div>
+
 
             <ul class="list-disc mx-6 mb-10 grid gap-2">
                 <li><p align="justify"><a>Marzia Campanile <i>(role as "co-supervisor")</i>. <b>Effects of lactational and gestational exposure to a polychlorinated biphenyl mixture (Aroclor1254) in the dentate gyrus of POMC-EGFP transgenic mice </b> (2019). GIGA-Neuroscience. University of Liege, Belgium </a> </p></li>
