--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -69,8 +69,8 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
    <section id="section1"></section>
-  <div class="mb-5"><div class="text-3xl w-full font-bold">Profile</div></div>
-
+  <div class="mb-5"><div class="text-3xl w-full font-bold">Profile <hr> </div></div>
+ 
   <div class="mb-5 text-justify">
   
   Experienced and multidisciplinary scientist & consultant with a background in toxicology, biology, environmental 
@@ -82,7 +82,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
       <section id="section2"></section>
-  <div class="mb-10"><div class="mb-5"><div class="text-3xl w-full font-bold">Skills</div> </div>
+  <div class="mb-10"><div class="mb-5"><div class="text-3xl w-full font-bold">Skills <hr> </div> </div>
 
     <ul class="list-disc md:columns-2 columns-1 mx-6">
 
@@ -152,10 +152,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   </ul>
     </div>
-
+<br>
         <section id="section3"></section>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Employment History </div>
+    <div class="text-3xl w-full font-bold">Employment History <hr>  </div>
   </div>
  
  
@@ -203,7 +203,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
       <section id="section4"></section>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Education</div>
+    <div class="text-3xl w-full font-bold">Education <hr> </div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
       <TimeLineElement
@@ -226,7 +226,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
       <section id="section5"></section>
    <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Teaching experience</div>
+    <div class="text-3xl w-full font-bold">Teaching experience <hr> </div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
     <TimeLineElement
@@ -258,7 +258,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
       <section id="section6"></section>
          <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships</div>
+    <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships <hr> </div>
   </div>
   <div class="time-line-container grid gap-4 mb-10">
      <TimeLineElement title="Postdoctoral Fellowship"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
@@ -281,7 +281,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
       <section id="section7"></section>
      <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Continuous Education</div>  </div> 
+    <div class="text-3xl w-full font-bold">Continuous Education <hr> </div>  </div> 
   <ul class="list-disc mx-6 mb-10 grid gap-2"> 
   
   <li> <a target="_blank">Environmental Legislation. UNED, Spain (6 ECTS) </a> </li>
@@ -305,7 +305,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
   <section id="section7b"></section>
   <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Internships</div>  </div> 
+    <div class="text-3xl w-full font-bold">Internships <hr> </div>  </div> 
       <ul class="list-disc mx-6 mb-10 grid gap-2"> 
         <li> <a target="_blank">Dr. Alejandro Lomniczi (2020). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA. </a> </li>
         <li> <a target="_blank">Dr. Alejandro Lomniczi (2018). Transgenerational effects of a mixture of Endocrine Disruptors on the hypothalamic transcriptome. Oregon Health & Science University (OHSU), Portland, USA.</a> </li>
@@ -314,7 +314,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       </ul>
 
       <section id="section8"></section>
-  <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences</div></div>
+  <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences <hr> </div></div>
       <div class="time-line-container grid gap-4 mb-10">
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
              <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
@@ -330,7 +330,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       </div>
 
           <section id="section9"></section>
-   <div class="mb-5"><div class="text-3xl w-full font-bold">Peer-reviewing</div></div>
+   <div class="mb-5"><div class="text-3xl w-full font-bold">Peer-reviewing <hr> </div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                    <li><a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a> </li>
                    <li><a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a></li>
@@ -340,7 +340,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           </ul>
 
           <section id="section9b"></section>
-          <div class="mb-5"><div class="text-3xl w-full font-bold">Master's Student Supervision</div></div>
+          <div class="mb-5"><div class="text-3xl w-full font-bold">Master's Student Supervision <hr> </div></div>
                 <ul class="list-disc mx-6 mb-10 grid gap-2">
                   <li><p align="justify"><a>Eva Luz Lachat <i>(co-supervisor)</i>. Bisphenol A and autism spectrum disorder in humans, a systematic review of the literature (2023). University of Lausanne, Switzerland</a> </p></li>
                   <li><p align="justify"><a>Anna Dreier <i>(expert)</i>. Next-generation human iPSC-derived 3D brain systems to study chemical-induced myelin disruption (2023). University of Lausanne, Switzerland </a> </p></li>
@@ -350,7 +350,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
        
 
               <section id="section10"></section>
-     <div class="mb-5"> <div class="text-3xl w-full font-bold">Active Membership</div></div>
+     <div class="mb-5"> <div class="text-3xl w-full font-bold">Active Membership <hr> </div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a href="https://www.swisstox.ch/" target="_blank">2023-Today: Member of the Swiss Society of Toxicology </a></li>
                     <li> <a href="https://www.endocrinology.org/" target="_blank">2023-Today: Member of the Society for Endocrinology (UK)</a></li>
@@ -362,7 +362,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
               <section id="section11"></section>
-     <div class="mb-5"><div class="text-3xl w-full font-bold">Language Skills</div></div>
+     <div class="mb-5"><div class="text-3xl w-full font-bold">Language Skills <hr> </div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a target="_blank">Spanish: Native</a></li>
                     <li><a target="_blank">English: C2</a></li>
@@ -370,7 +370,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           </ul>
 
               <section id="section12"></section>
-  <div class="mb-5"><div class="text-3xl w-full font-bold">Certifications</div> </div>
+  <div class="mb-5"><div class="text-3xl w-full font-bold">Certifications <hr> </div> </div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
                     <li><a href="https://felasa.eu/" target="_blank"> FELASA certificate</a></li>
           </ul>
