--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -282,14 +282,10 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <section id="section7"></section>
      <div class="mb-5">
     <div class="text-3xl w-full font-bold">Continuous Education <hr> </div>  </div> 
-  <ul class="list-disc mx-6 mb-10 grid gap-2"> 
-  
-  <li> <a target="_blank">Environmental Legislation. UNED, Spain (6 ECTS) </a> </li>
-  <li> <a target="_blank">Economics & Environmental Strategy. UNED, Spain (6 ECTS) </a> </li>
-  <li> <a target="_blank">Ecology: Environment and Society. UNED, Spain (6 ECTS) </a> </li>
-  <li> <a target="_blank">Human Ecology. UNED, Spain (6 ECTS) </a> </li>
-  <li> <a target="_blank">Environmental History. University of Gothenburg, Sweden (15 ECTS) </a> </li>
-  <li> <a target="_blank">UCREATE2. Workshop on sustainable entrepreneurship (7 weeks)</a> </li>
+  <ul class="list-disc mx-6 mb-10 grid gap-2">   
+
+   <b> Data Science / Bioinformatics:</b>
+  <li> <a target="_blank">Multiomics Data Analysis and Integration. Swiss Institute of Bioinformatics (SIB) (0.5ECTS) </a> </li>
   <li> <a target="_blank">Machine learning. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)</a> </li>
   <li> <a target="_blank">UNIX Shell Scripting for Life Scientists. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
   <li> <a target="_blank">Intermediate Python. Swiss Institute of Bioinformatics (SIB) (0.5ECTS)  </a> </li>
@@ -299,9 +295,17 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <li> <a target="_blank">HPC cluster. University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank">Statistics 1. Resal, University of Lausanne (Switzerland) (1 day)  </a> </li>
   <li> <a target="_blank"> Statistics 2. Resal, University of Lausanne (Switzerland) (1 day) </a> </li>
-  </ul>
-  
 
+  <b> Environmental Science / Ecology:</b>
+  <li> <a target="_blank">Environmental History. University of Gothenburg, Sweden (15 ECTS) </a> </li>
+  <li> <a target="_blank">Environmental Legislation. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Economics & Environmental Strategy. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Ecology: Environment and Society. UNED, Spain (6 ECTS) </a> </li>
+  <li> <a target="_blank">Human Ecology. UNED, Spain (6 ECTS) </a> </li>
+
+  <b> Entrepreneurship / Project management:</b>
+  <li> <a target="_blank">UCREATE2. Workshop on sustainable entrepreneurship (7 weeks)</a> </li>
+   </ul>
 
   <section id="section7b"></section>
   <div class="mb-5">
