--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -14,6 +14,7 @@
 			<!-- Sidebar content here -->
 			<li><a id="About" href="/">About</a></li>
 			<li><a id="projects" href="/projects">Projects</a></li>
+			<li><a id="bioinfo" href="/bioinfo">My Bioinformatic tools</a> </li>
 			<li><a id="cv" href="/cv">CV</a> </li>
 			<li><a id="Publications" href="/Publications">Publications</a></li>
 			<li><a id="Contact" href="/Contact/">Contact</a></li>
