--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -12,7 +12,7 @@
 		</div>
 		<ul class="grow shrink">
 			<!-- Sidebar content here -->
-			<li><a id="About" href="/">About</a></li>
+			<li><a id="About" href="/"> <b> About </b></a></li>
 			<li><a id="projects" href="/projects">Projects</a></li>
 			<li><a id="bioinfo" href="/bioinfo">My Bioinformatic tools</a> </li>
 			<li><a id="cv" href="/cv">CV</a> </li>
