--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -13,11 +13,11 @@
 		<ul class="grow shrink">
 			<!-- Sidebar content here -->
 			<li><a id="About" href="/"> <b> About </b></a></li>
-			<li><a id="projects" href="/projects">Projects</a></li>
-			<li><a id="bioinfo" href="/bioinfo">My Bioinformatic tools</a> </li>
-			<li><a id="cv" href="/cv">CV</a> </li>
-			<li><a id="Publications" href="/Publications">Publications</a></li>
-			<li><a id="Contact" href="/Contact/">Contact</a></li>
+			<li><a id="projects" href="/projects"><b> Projects</b></a></li>
+			<li><a id="bioinfo" href="/bioinfo"><b> My Bioinformatic tools</b></a> </li>
+			<li><a id="cv" href="/cv"><b> CV</b></a> </li>
+			<li><a id="Publications" href="/Publications"><b> Publications</b></a></li>
+			<li><a id="Contact" href="/Contact/"><b> Contact</b></a></li>
 		</ul>
 		
 		<div class="social-icons px-4 my-2 flex self-center">
