--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -120,9 +120,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
    <div style="line-height:50%;"> <br></div>
    <ul class="list-disc mx-6 mb-10 grid gap-2">
 
-    <li>  <div class="text-lg"> <p align="justify"> <a href=" https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1" target="_blank"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Nature Communications. </i> <b>BioRxiv preprint. </b> </a>  </p> </div>
+    <li>  <div class="text-lg"> <p align="justify"> <a href="https://www.biorxiv.org/content/10.1101/2023.07.06.547914v1" target="_blank"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Messina A, Thorens B, Santoni F, Langlet F. <i> Pseudospatial transcriptional gradient analysis of hypothalamic ependymal cells challenges tanycyte classification. Submitted to Nature Communications. </i> <b>BioRxiv preprint. </b> </a>  </p> </div>
     </li>
     <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
+    <li>  <div class="text-lg"> <p align="justify"> <a href="https://www.biorxiv.org/content/10.1101/2020.06.26.172965v1" target="_blank">  <u></u>López-Rodríguez D</u>, Francisco Aylwin C,  Delli V, Sevrin E,  Campanile M,  Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS.   <i> Multi- and transgenerational disruption of maternal behavior and female puberty by Endocrine Disrupting Chemical (EDC) mixture exposure </i>
+ <b>BioRxiv preprint. </b> </a>  </p> </div>
+    </li>
+
 
     <li> <div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>.<i> An Environmental History Perspective on Sustainable Economic Growth. May 13, 2023. </i>
     </li>
