--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -124,7 +124,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     </li>
     <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
 
-    <li>  <div class="text-lg"> <p align="justify"> <a href="https://www.biorxiv.org/content/10.1101/2020.06.26.172965v1" target="_blank">  <u></u>López-Rodríguez D</u>, Francisco Aylwin C,  Delli V, Sevrin E,  Campanile M,  Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS.   <i> Multi- and transgenerational disruption of maternal behavior and female puberty by Endocrine Disrupting Chemical (EDC) mixture exposure </i>
+    <li>  <div class="text-lg"> <p align="justify"> <a href="https://www.biorxiv.org/content/10.1101/2020.06.26.172965v1" target="_blank">  <u>Lopez-Rodriguez D</u>, Francisco Aylwin C,  Delli V, Sevrin E,  Campanile M,  Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS.   <i> Multi- and transgenerational disruption of maternal behavior and female puberty by Endocrine Disrupting Chemical (EDC) mixture exposure </i>
  <b>BioRxiv preprint. </b> </a>  </p> </div>
     </li>
 
