--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -56,14 +56,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
  
       <div style="line-height:50%;"> <br></div>
 
-
-
       <ul class="list-disc mx-6 mb-10 grid gap-2">
 
       <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>   Under Review in Nature Communications. </b> </p> </div></li>
       <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
 
-      <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div><br>
+      <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i> <b> Manuscripts in Preparation. </b> </p> </div></li>
+      
+      <li><div class="text-lg"> <p align="justify"> <u>Lopez-Rodriguez D</u> & Guerrero-Limon, G. <i> Harnessing the power of Artificial Intelligence (AI) to generate innovative New Alternative Methodologies (NAMs) to improve chemical regulatory risk assessment.</i> Manuscripts in Preparation. </p> </div>
       </li>
       <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u> Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Manuscripts in Preparation. </p> </div>
       </li>
