--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,9 +95,19 @@ const last_posts = posts.slice(0, 3);
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
         </div>
 
+
+        <HorizontalCard
+        title="Multi-Omics Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs)"
+        img="/p12b.png"
+        desc="Keywords: Brain Spheres, Bioinformatics, In Vitro Methods, Lipidomics, Metabolomics, Proteomics, Transcriptomics, Toxicology, Multiblock. "
+        id="p12" 
+        url="/p12/"
+      />
+
+
         <HorizontalCard
           title="Pesticide Exposure Assessment of the Swiss Sensitive Population"
-          img="/p11.png"
+          img="/p11b.png"
           desc="Keywords: Environmental Contaminants, Pesticides, Toxicology, Exposure Assessment, Bio-samples, Exposure Mixtures, Exposure Sources, Endocrine Disruptors, Risk Assessment, Environmental Science."
           id="p11" 
           url="/p11/"
