--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -336,6 +336,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
           <section id="section9"></section>
    <div class="mb-5"><div class="text-3xl w-full font-bold">Peer-reviewing <hr> </div></div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
+                   <li><a href="https://www.pnas.org/" target="_blank">Reviewer for PNAS </a> </li>
                    <li><a href="https://www.nature.com/srep/" target="_blank">Reviewer for Nature Scientific Reports </a> </li>
                    <li><a href="https://www.cell.com/molecular-therapy-family/home" target="_blank">Reviewer for CellPress Molecular Therapy </a></li>
                    <li><a href="https://www.karger.com/journal/home/223855" target="_blank">Reviewer for Neuroendocrinology</a></li>
