--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -137,12 +137,12 @@ const last_posts = posts.slice(0, 3);
 
 <div class="py-5"></div>
 <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="https://www.instagram.com/lydiedramah/" target="_blank" class="mx-3" aria-label="Lydie Dramah" title="Lydie Dramah">
-				<img src="/Thesis.jpg" alt="Lydie Dramah" width="350" height="350"> </img>
+		<a href="https://www.instagram.com/" target="_blank" class="mx-3" aria-label="x" title="x">
+				<img src="/Thesis.jpg" alt="x" width="350" height="350"> </img>
 			</a>
 </div>
 
-<div class="py-0"><text class="text-lg"> <p align="center"> <font size="2"> "Disruption", illustration by <a href="https://www.instagram.com/lydiedramah/"  target="_blank"><i>lydie dramah<a>  </i> </p> </font>  </text> </div>
+<div class="py-0"><text class="text-lg"> <p align="center"> <font size="2"> "Disruption"  </i> </p> </font>  </text> </div>
 
 
 
