--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -23,6 +23,8 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 -->
 
+
+
 <BaseLayout title = "Publications - David Lopez Rodriguez">
 
     <div style="text-align:center">
@@ -149,18 +151,19 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
       <p align="justify">
-        <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
+        <a href=" " target="_blank">
           <text class="text-lg"> 
             <u>Lopez-Rodriguez D</u>. 
             <i>Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation.</i> 
             GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
         </a>
       </p>
-    <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
+     <!--  >
+      <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank">
           <text class="text-lg"> 
             <b>Download</b> 
           </text>
-      </a>
+      </a> -->
 
 
 
