--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -87,9 +87,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
     <ul class="list-disc mx-6 mb-10 grid gap-2">
 
-      <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>   Under Review in Nature Communications. </b> </p> </div></li>
+      <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>  Nature Communications. </b> Volume 15, article number 6604, (2024) </p> </div></li>
       <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
-      
+
       <li><div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
       </p></a></li>
       <li>  <div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank">  <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
