--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -320,6 +320,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       <section id="section8"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences <hr> </div></div>
       <div class="time-line-container grid gap-4 mb-10">
+            <TimeLineElement title="SCAHT retreat"  subtitle="2023 -  Oral communication" />
              <TimeLineElement title="Society for Neuroendocrinology meeting (SNE)"  subtitle="2021 -  Oral communication - Online" />
              <TimeLineElement title="Society for Behavioral Neuroendocrinology meeting (SBN)"  subtitle="2019 - Poster presentation - Bloomington, Indiana, USA" />
              <TimeLineElement title="European Congress for Endocrinology (ECE)"  subtitle="2019 - Oral communication  - Lyon, France" />
